# job_parser_DB_MVP

./: DBManager.py  README.md  main.py  parser.py  pyproject.toml
